Align with new source master branch